--- a/Lab-1/index.html
+++ b/Lab-1/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab-1</title>
+    <title>Lab-1 Task_1</title>
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
+    <table>
+    <tr>
+        <th>Subject</th>
+        <th>Marks</th>
+    </tr>
+    <tr>
+        <td>English</td>
+        <td>85</td>
+    </tr>
+        <tr>
+        <td>Mathematics</td>
+        <td>70</td>
+        </tr>
+        <tr>
+        <td>ICT</td>
+        <td>90</td>
+     </tr>
     
+
+    </table>
 </body>
 </html>
